<resources>
    <string name="app_name">QuickVision</string>
    <string name="entrar">Entrar</string>
    <string name="text_esqueci">Esqueceu a senha? Clique aqui</string>
    <string name="tittle_esqueci">Recuperar Senha</string>
    <string name="tittle_qrcode">Seu QR Code</string>
    <string name="bt_enviar">Enviar</string>
    <string name="title_menu">Menu</string>
    <string name="button_agendar">Agendar</string>
    <string name="button_consulta">Consultar Agendamentos</string>
    <string name="button_entrada">Liberar Entrada</string>
    <string name="button_logout">Sair da Conta</string>
    <string name="button_share">Compartilhar</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_confirm_email">Confirme seu E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="text_nome">Nome</string>
    <string name="text_cpf">CPF ou CNPJ</string>
    <string name="text_telefone">Telefone</string>
    <string name="text_obs">Observações</string>
    <string name="text_data">Data</string>
    <string name="text_hora">Hora</string>
    <string name="button_salvar">Salvar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_visitante">Visitante</string>
    <string name="button_terceiro">Prestador</string>
    <string name="erro_preenchimento">Preencha todos os campos</string>
    <string name="erro_senha">Senha incorreta, tente novamente</string>
    <string name="erro_cadastrar_user">Usuário já cadastrado</string>
    <string name="erro_email">O e-mail não é válido</string>
    <string name="salvo_agendamento">Agendamento efetuado com sucesso</string>
    <string name="falha_agendamento">Ocorreu um problema com o agendamento</string>
    <string name="falha_compartilhar">Não foi identificado um QR Code para compartilhar</string>
    <string name="button_config">Configurações</string>
    <string name="button_voltar">Voltar</string>
    <string name="button_pesquisa">Pesquisar</string>
    <string name="hint_busca">Informe um nome para busca</string>
    <string name="title_creditos">Desenvolvido por</string>
    <string name="text_equipe">Equipe Quick Vision - 5º Semestre de ADS</string>

</resources>