<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agendar">

    <TextView
        android:id="@+id/text_agendar"
        style="@style/TextView_Menu"
        android:text="@string/button_agendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:hint="@string/text_nome"
        android:layout_marginTop="30dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_agendar"/>

    <EditText
        android:id="@+id/edit_cpf"
        style="@style/Edit_Text"
        android:hint="@string/text_cpf"
        android:layout_marginTop="10dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"/>

    <EditText
        android:id="@+id/edit_telefone"
        style="@style/Edit_Text"
        android:hint="@string/text_telefone"
        android:layout_marginTop="10dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_cpf"/>

    <EditText
        android:id="@+id/edit_obs"
        style="@style/Edit_Text"
        android:hint="@string/text_obs"
        android:layout_marginTop="10dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rb_grupo"/>

    <RadioGroup
        android:id="@+id/rb_grupo"
        style="@style/Edit_Text"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_telefone">

        <RadioButton
            android:id="@+id/rb_visitante"
            style="@style/Radio_Button"
            android:text="@string/button_visitante"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RadioButton
            android:id="@+id/rb_terceiro"
            style="@style/Radio_Button"
            android:text="@string/button_terceiro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RadioGroup>

    <EditText
        android:id="@+id/edit_data"
        style="@style/Edit_Text"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:hint="@string/text_data"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_obs" />


    <EditText
        android:id="@+id/edit_hora"
        style="@style/Edit_Text"
        android:layout_width="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/text_hora"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_obs" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_salvar"
        style="@style/Button"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/button_salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_data" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cancelar"
        style="@style/Button"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/button_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_hora" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>